[gd_scene load_steps=73 format=2]

[ext_resource path="res://scripts/enemigos/cama.gd" type="Script" id=1]
[ext_resource path="res://scripts/pj/pj_general.gd" type="Script" id=2]
[ext_resource path="res://scripts/burbuja/burbuja.gd" type="Script" id=3]
[ext_resource path="res://scripts/pj/animaciones.gd" type="Script" id=4]
[ext_resource path="res://scripts/pj/movimiento.gd" type="Script" id=5]
[ext_resource path="res://imgs/enemigos/cama/undabed.png" type="Texture" id=6]
[ext_resource path="res://imgs/burbuja/Group 1.png" type="Texture" id=7]
[ext_resource path="res://imgs/pj_prueba/der1.png" type="Texture" id=8]
[ext_resource path="res://imgs/pj_prueba/der2.png" type="Texture" id=9]
[ext_resource path="res://imgs/burbuja/Group 2.png" type="Texture" id=10]
[ext_resource path="res://scripts/burbuja/area-supervivencia.gd" type="Script" id=11]
[ext_resource path="res://imgs/tileset/new_tileset.tres" type="TileSet" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]
[ext_resource path="res://imgs/enemigos/dimitrescu/QUEEN.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=177]
animations = [ {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ) ],
"loop": false,
"name": "muerte",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=178]
extents = Vector2( 79.625, 24 )

[sub_resource type="RectangleShape2D" id=179]
extents = Vector2( 56, 68.5 )

[sub_resource type="Gradient" id=164]
colors = PoolColorArray( 1, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=180]
gradient = SubResource( 164 )
fill = 1
fill_from = Vector2( 0.508333, 0.466667 )
fill_to = Vector2( 0.541667, 0.075 )

[sub_resource type="PhysicsMaterial" id=181]
rough = true
absorbent = true

[sub_resource type="CapsuleShape2D" id=182]
radius = 18.0
height = 12.0

[sub_resource type="RectangleShape2D" id=183]
extents = Vector2( 20, 22.5 )

[sub_resource type="RectangleShape2D" id=184]
extents = Vector2( 20, 3 )

[sub_resource type="Gradient" id=42]
offsets = PoolRealArray( 0, 0.893855, 1 )
colors = PoolColorArray( 0.975891, 0.691406, 1, 1, 0.0443436, 0.0443436, 0.0443436, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=185]
gradient = SubResource( 42 )
fill = 1
fill_from = Vector2( 0.516667, 0.479167 )
fill_to = Vector2( 0.05, 0.2375 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 14 )
region = Rect2( 1125, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 14 )
region = Rect2( 1000, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 14 )
region = Rect2( 875, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 14 )
region = Rect2( 750, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 14 )
region = Rect2( 625, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 14 )
region = Rect2( 500, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 14 )
region = Rect2( 375, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 14 )
region = Rect2( 250, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 14 )
region = Rect2( 125, 0, 125, 128 )

[sub_resource type="AtlasTexture" id=205]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 125, 128 )

[sub_resource type="SpriteFrames" id=206]
animations = [ {
"frames": [ SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ), SubResource( 204 ), SubResource( 205 ) ],
"loop": false,
"name": "atacando",
"speed": 1.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=207]

[sub_resource type="Curve2D" id=186]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 18, 363, -250.95, -1.33484, 250.95, 1.33484, 608, 262, -201.561, -33.371, 201.561, 33.371, 1005, 350, -178.869, 12.0136, 178.869, -12.0136, 1410, 284, -121.47, -26.6968, 121.47, 26.6968, 1735, 369, -68.0768, 36.0407, 68.0768, -36.0407, 1939, 292, -94.7736, -13.3484, 94.7736, 13.3484, 2247, 337, -105.452, 13.3484, 105.452, -13.3484, 2509, 282, 0, 0, 0, 0, 2707, 333 )
}

[sub_resource type="RectangleShape2D" id=187]
extents = Vector2( 37.4458, 31.2802 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 10 )
region = Rect2( 144, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 48, 46 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 60, 46 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 7 )
region = Rect2( 60, 0, 60, 46 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 60, 46 )

[sub_resource type="SpriteFrames" id=188]
animations = [ {
"frames": [ SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), null ],
"loop": false,
"name": "death",
"speed": 9.0
}, {
"frames": [ SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 175 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=189]
offsets = PoolRealArray( 0, 0.0391061, 1 )
colors = PoolColorArray( 0.790222, 0.799915, 0.945313, 1, 0.965541, 0.764374, 0.988281, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=190]
gradient = SubResource( 189 )
fill = 1
fill_from = Vector2( 0.508333, 0.479167 )
fill_to = Vector2( 0.2375, 0.0791667 )

[sub_resource type="Animation" id=191]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=192]
resource_name = "burbuja"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2618.58 ]
}

[sub_resource type="RectangleShape2D" id=193]
extents = Vector2( 14.3219, 10 )

[sub_resource type="Animation" id=194]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=195]
resource_name = "burbuja"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2618.58 ]
}

[node name="Node2D" type="Node2D"]

[node name="piso" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
show_collision = true
format = 1
tile_data = PoolIntArray( 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 2621445, 10, 0, 2621447, 10, 0, 2621449, 10, 0, 2621451, 10, 0, 2621453, 10, 0 )

[node name="Cama" type="Area2D" parent="."]
position = Vector2( 1181, 17 )
script = ExtResource( 1 )

[node name="animaciones" type="AnimatedSprite" parent="Cama"]
position = Vector2( 1383, 562 )
scale = Vector2( 2.3, 2.3 )
frames = SubResource( 177 )
animation = "idle"
playing = true

[node name="activador" type="CollisionShape2D" parent="Cama"]
position = Vector2( 1231, 580 )
shape = SubResource( 178 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cama"]
position = Vector2( 1384, 564.5 )
shape = SubResource( 179 )

[node name="Light2D" type="Light2D" parent="Cama"]
position = Vector2( 1391, 600 )
scale = Vector2( 1.67187, 1.84375 )
texture = SubResource( 180 )

[node name="player" type="RigidBody2D" parent="."]
position = Vector2( 518, 559 )
mode = 2
mass = 8.16327
physics_material_override = SubResource( 181 )
gravity_scale = 16.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( 24, 26 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
script = ExtResource( 4 )
rate = 0.25
ani_caminar = [ ExtResource( 9 ), ExtResource( 8 ) ]
spr_idle = ExtResource( 8 )
spr_salta = ExtResource( 9 )

[node name="hitbox" type="CollisionShape2D" parent="player"]
position = Vector2( 21, 26 )
shape = SubResource( 182 )
script = ExtResource( 5 )
vel = 25000.0
fuerza_salto = 300.0
pisoPath = NodePath("../../piso")

[node name="hitbox_para_enemigos" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/hitbox_para_enemigos"]
position = Vector2( 21, 23.5 )
shape = SubResource( 183 )

[node name="checkeaPiso" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/checkeaPiso"]
position = Vector2( 21, 49 )
shape = SubResource( 184 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 0, -212 )
current = true
limit_top = 0
limit_bottom = 0

[node name="Light2D" type="Light2D" parent="player"]
position = Vector2( 22, 24 )
scale = Vector2( 5.77533, 3.22461 )
texture = SubResource( 185 )
color = Color( 0.513726, 0.580392, 0.752941, 1 )

[node name="dimitrescu" type="Area2D" parent="player"]
visible = false
position = Vector2( 355, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player/dimitrescu"]
position = Vector2( 165, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 206 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/dimitrescu"]
shape = SubResource( 207 )

[node name="Timer" type="Timer" parent="player"]
wait_time = 9.0

[node name="Corazon" type="Path2D" parent="."]
visible = false
position = Vector2( 1.92785, 0 )
scale = Vector2( 0.892897, 1 )
curve = SubResource( 186 )
script = ExtResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Corazon"]
position = Vector2( 18, 363 )
rotation = -0.288505

[node name="burbuja" type="Area2D" parent="Corazon/PathFollow2D"]
position = Vector2( -3.8147e-06, 3.05176e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corazon/PathFollow2D/burbuja"]
position = Vector2( 2.14735, 0.637238 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 187 )
one_way_collision_margin = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Corazon/PathFollow2D/burbuja"]
scale = Vector2( 2.56617, 2.49269 )
frames = SubResource( 188 )
animation = "idle"
playing = true

[node name="Light2D" type="Light2D" parent="Corazon/PathFollow2D/burbuja"]
position = Vector2( -4.72473, -24.6326 )
scale = Vector2( 22.5225, 15.3915 )
texture = SubResource( 190 )
texture_scale = 1.42

[node name="AnimationPlayer" type="AnimationPlayer" parent="Corazon"]
root_node = NodePath("../PathFollow2D")
anims/RESET = SubResource( 191 )
anims/burbuja = SubResource( 192 )

[node name="AREA SUPERVIVENCIA" type="Path2D" parent="."]
position = Vector2( 1.92785, 0 )
scale = Vector2( 0.892897, 1 )
curve = SubResource( 186 )
script = ExtResource( 11 )

[node name="PathFollow2D" type="PathFollow2D" parent="AREA SUPERVIVENCIA"]
position = Vector2( 18, 363 )
rotation = -0.288505
rotate = false
loop = false

[node name="Area2D" type="Area2D" parent="AREA SUPERVIVENCIA/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA SUPERVIVENCIA/PathFollow2D/Area2D"]
position = Vector2( -3.69553, -1.05289 )
rotation = 0.277507
scale = Vector2( 40, 40 )
shape = SubResource( 193 )

[node name="Sprite" type="Sprite" parent="AREA SUPERVIVENCIA/PathFollow2D/Area2D"]
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AREA SUPERVIVENCIA"]
root_node = NodePath("../PathFollow2D")
anims/RESET = SubResource( 194 )
anims/burbuja = SubResource( 195 )

[connection signal="body_entered" from="Cama" to="Cama" method="_on_Enemigo_body_entered"]
[connection signal="body_entered" from="player" to="AREA SUPERVIVENCIA" method="_on_player_body_entered"]
[connection signal="body_exited" from="player" to="AREA SUPERVIVENCIA" method="_on_player_body_exited"]
[connection signal="body_entered" from="player/checkeaPiso" to="player/hitbox" method="_on_checkeaPiso_body_entered"]
[connection signal="body_exited" from="player/checkeaPiso" to="player/hitbox" method="_on_checkeaPiso_body_exited"]
[connection signal="timeout" from="player/Timer" to="player" method="_on_Timer_timeout"]
[connection signal="area_entered" from="AREA SUPERVIVENCIA/PathFollow2D/Area2D" to="player" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="AREA SUPERVIVENCIA/PathFollow2D/Area2D" to="player" method="_on_Area2D_area_exited"]
